# Darija_Seq2Seq_Transformer

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
ary_seq2seq/: __init__.py  bleu.py  config.py  dataset.py  eval.py  features.py  plots.py
ary_seq2seq/modeling/: ary_kh.py  colmo.py  layers.py  predict.py  prompt.py  torch_layers.py  train.py  transformer_torch_ary_spm.py
models/: ary_kh.py
references/: neural_machine_translation_with_transformer.py
