[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ary_seq2seq"
version = "0.0.1"
description = "EN-ARY NMT school project"
authors = [
  { name = "INALCO" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["ary_seq2seq"]
include = ["pyproject.toml", "ary_seq2seq/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ary_seq2seq"]
force-sort-within-sections = true

